kubernetes/resources.yaml
# Run `eval $(minikube docker-env)` to enable using local Docker images
# Run `docker compose build` to build the images
# Then run `kubectl apply -f arcadecord-kubernetes.yaml` to apply this config
#
# Make sure to run `minikube tunnel` to expose to localhost!!

# BEGIN WEB CONFIG
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# Environment variables using metadata: https://kubernetes.io/docs/tasks/inject-data-application/environment-variable-expose-pod-information/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: arcadecord.azurecr.io/arcadecord_web:latest
          ports:
            - containerPort: 5000
              name: http-web-svc
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: http-web-svc
          #   initialDelaySeconds: 5
          #   periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: http-web-svc
  selector:
    app: web
  type: NodePort
  sessionAffinity: None
# END WEB CONFIG
---
# BEGIN GAMESERVER CONFIG
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver
  labels:
    app: gameserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
        - name: gameserver
          image: arcadecord.azurecr.io/arcadecord_gameserver:latest
          ports:
            - containerPort: 3000
              name: http-ws-gs-svc
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: http-ws-gs-svc
          #   initialDelaySeconds: 5
          #   periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: gameserver
  labels:
    app: gameserver
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-ws-gs-svc
  selector:
    app: gameserver
  type: NodePort
# END GAMESERVER CONFIG
---
# BEGIN SHARDMANAGER CONFIG
apiVersion: v1
kind: Service
metadata:
  name: shardmanager
  labels:
    app: shardmanager
spec:
  ports:
    - port: 3000
      name: http-shardm-svc
  clusterIP: None
  selector:
    app: shardmanager
---
# Access each pod with hostname shardmanager-{N}.
# shardmanager-0, shardmanager-1
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shardmanager
spec:
  serviceName: 'shardmanager'
  replicas: 2
  selector:
    matchLabels:
      app: shardmanager
  template:
    metadata:
      labels:
        app: shardmanager
    spec:
      containers:
        - name: shardmanager
          image: arcadecord.azurecr.io/arcadecord_shardmanager:latest
          ports:
            - containerPort: 3000
              name: http-shardm-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  tls:
    - hosts:
        - www.arcadecord.com
        # assumes that tls-secret exists and the SSL
        # certificate contains a common name for api.arcadecord.com
      secretName: tls-secret
  rules:
    - host: www.arcadecord.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http-web-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameserver-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-secure: 'false'
    nginx.ingress.kubernetes.io/session-cookie-path: '/'
    nginx.ingress.kubernetes.io/session-cookie-samesite: 'None'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-redirect-from: 'off'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST,
      OPTIONS, DELETE, PATCH'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://www.arcadecord.com'
    nginx.ingress.kubernetes.io/proxy-http-version: '1.1'
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        more_set_headers "Access-Control-Allow-Origin: $http_origin";
        # proxy_pass http://127.0.0.1:3000;
        # proxy_redirect off;
        proxy_pass_request_headers on;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header Host $http_host;
        proxy_set_header X-NginX-Proxy true;
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-Server $host;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_set_header Host $host;
        proxy_cache_bypass $http_upgrade;
      }
    nginx.org/websocket-services: 'gameserver'
    nginx.ingress.kubernetes.io/websocket-services: 'gameserver'
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: 'true'
    nginx.ingress.kubernetes.io/proxy-ssl-name: 'true'
spec:
  tls:
    - hosts:
        - api.arcadecord.com
        # assumes that tls-secret exists and the SSL
        # certificate contains a common name for api.arcadecord.com
      secretName: tls-secret
  rules:
    - host: api.arcadecord.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gameserver
                port:
                  name: http-ws-gs-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      nodeSelector:
        'beta.kubernetes.io/os': linux
      containers:
        - name: redis-server
          image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
          ports:
            - containerPort: 6379
              name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
spec:
  ports:
    - port: 6379
  selector:
    app: redis-server
